test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/static_non_const_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[44]:
  int
  identifier(foo)
  (
  int
  identifier(p)
  )
  {
  static
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  identifier(p)
  ,
  identifier(p)
  +
  const int(1)
  ,
  const int(0)
  }
  ;
  return
  identifier(arr)
  [
  const int(2)
  ]
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(5)
  )
  ;
  }
